--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	
-	<title>GeoJSON tutorial - Leaflet</title>
+	<title>Francavilla Fontana - Città Futura</title>
 
 	<meta charset="utf-8" />
 	
