--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<link rel="icon" href="favicon.ico" >
 	<title>Francavilla Fontana - Città Futura</title>
 
 	<meta charset="utf-8" />
